--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,7 @@ body.dark-theme .invert-secondary-color {
     border-radius: 2rem;
     font-size: 0.9rem;
     font-weight: 700;
+    text-align: center;
 }
 
 body.light-theme .btn-primary {
@@ -126,6 +127,10 @@ body.dark-theme .btn-secondary {
     color: var(--dark-theme-bg-color);
 }
 
+
+.section-head {
+    font-size: 1.75rem;
+}
 
 header.hero {
     min-height: 100vh;
@@ -335,8 +340,12 @@ body.dark-theme .showcase-lead {
 }
 
 
-.section {
+section {
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .flex-container {
@@ -397,11 +406,28 @@ body.dark-theme .showcase-lead {
     margin: 1.5rem 0 0 0;
 }
 
+.about-button-container {
+    display: flex;
+    gap: 1rem;
+}
+
 .flex-item.image-content .about-img{
     max-width: 100%;
     width: 100%;
     height: 85vh;
     object-fit: cover;
+}
+
+.skills.container {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.skills.container .section-head {
+    margin-bottom: 1rem;
 }
 
 .skill-list-container > .skill-list {
@@ -425,7 +451,9 @@ body.dark-theme .showcase-lead {
     width: 100px; 
     height: 100px;
     padding: 1rem;
-
+    /* display: flex;
+    justify-content: center;
+    align-items: center; */
     font-size: 3.5rem;
     text-align: center;
     
@@ -491,7 +519,12 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
 }
 
 
-
+.skills-others {
+    text-align: justify;
+    line-height: 1.5;
+    word-spacing: 5px;
+    margin-top: 2rem;
+}
 
 
 @media screen and (max-width: 700px) {
@@ -534,6 +567,17 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
     .flex-item.image-content .about-img {
         height: 50vh;;
         width: 100%;
+    }
+
+    .skill-list-container .skill-list li.skill-list-item {
+        margin: 0.75rem;
+    }
+    
+    .skill-list-container .skill-list li.skill-list-item span.skill-icon {
+        width: 70px; 
+        height: 70px;
+        padding: 1rem; 
+        font-size: 2rem;
     }
     
 }
