--- a/css/styles.css
+++ b/css/styles.css
@@ -549,7 +549,15 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
     margin-top: 2rem;
 }
 
+.projects.container {
+    margin: 2rem auto;
+}
+
 .projects.container .section-lead {
+    margin: 1rem 0;
+}
+
+.projects.container .cards {
     margin: 1rem 0;
 }
 
@@ -558,22 +566,31 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    margin: 1rem 0;
+    flex-wrap: wrap;
+    align-content: center;
 }
 
 .projects.container .card {
-    flex:1 ;
-    margin: 1rem 1rem;
+    flex: 1;
+    min-width: 300px;
+    max-width: 300px;
+    min-height: 450px;
+    margin: 1rem 1.5rem;
     border-radius: 0.5rem;
     cursor: pointer;
-    transition: all 0.4s ease-in-out;
-    
+    /* transition: all 0.4s ease-in-out; */
+    transition: all 200ms cubic-bezier(.164, .317, .38, .767)
 }
 
 .projects.container .card:hover {
-    transform: translateY(-10px) rotate(1deg) scale(1.05);
-    box-shadow: 10px 10px 15px -1px rgb(0 0 0 / 21%);
-        
+    /* transform: translateY(-10px) scale(1.05); */
+    transform: translate3d(0px, -20px, 0px) scale3d(1, 1, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(-1deg, 1deg); transform-style: preserve-3d;
+    box-shadow:  10px 10px 15px rgb(119 119 119);
+}
+
+body.dark-theme .projects.container .card:hover {
+    /* box-shadow:  5px 5px 15px  */
+    box-shadow:  5px 5px 10px -3px  rgb(119 119 119);
 }
 
 .projects.container .card .card-footer {
@@ -583,7 +600,6 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
 
 .projects.container .card .card-header {
     border-radius: 0.5rem 0.5rem 0 0;
-    height: 100%;
     
 }
 
@@ -612,7 +628,7 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
 
 .projects.container .card .card-header .project-img {
     width: 100%;
-    object-fit: cover;
+    object-fit: fit;
     height: 100%;
 }
 
@@ -635,13 +651,6 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
 
 
 
-@media screen and (max-width: 800px) {
-    .projects.container .card-container {
-        flex-wrap: wrap;
-    }
-}
-
-
 @media screen and (max-width: 700px) {
     .flex-container {
         flex-direction: column;
@@ -655,7 +664,17 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
     }
 }
 
+@media screen and (max-width: 600px) {
+    .projects.container .card-container {
+        flex-direction: column;
+    }
 
+    .projects.container .card-container .card{
+        margin-left: 0;
+        margin-right: 0;
+    }
+    
+}
 
 @media screen and (max-width: 500px) {
     nav.nav ul.nav-links li a{
@@ -663,7 +682,7 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
         font-size: 0.8;
     }
 
-    .hero-container.container, .about.container, .skills.container {
+    .hero-container.container, .about.container, .skills.container, .projects.container {
         padding: 1rem 0.1rem;
     }
     
@@ -672,6 +691,10 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
     }
 
     .about.container.container {
+        margin: 2rem 0 1rem 0;
+    }
+
+    .projects.container {
         margin: 2rem 0 1rem 0;
     }
 
@@ -702,11 +725,23 @@ body.dark-theme .skill-list-container .skill-list li.skill-list-item span.skill-
         font-size: 0.7rem! important;
         padding: 0.1rem;
     }
+
+    .projects.container .card-container .card {
+        min-width: 250px;
+        max-width: 250px;
+        min-height: 400px;
+    }
 }
 
 @media screen and (max-width: 300px) {
     nav.nav ul.nav-links {
         flex-direction: column;
+    }
+
+    .projects.container .card-container .card {
+        min-width: 240px;
+        max-width: 240px;
+        min-height: 300px;
     }
 }
 
